codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__unified_exec_footer__tests__render_many_sessions.snap
---
source: tui2/src/bottom_pane/unified_exec_footer.rs
assertion_line: 91
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 1 },
    content: [
        "  123 background terminals running · /ps to view  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 48, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
